fix spacing on external provider list

--- a/source/Core/Services/DefaultViewService/HttpAssets/app/app.less
+++ b/source/Core/Services/DefaultViewService/HttpAssets/app/app.less
@@ -72,8 +72,12 @@
          }
     }
 
-    .external-providers{
-        li{
+    .external-providers {
+        li:first-child {
+            padding-left:5px;
+        }
+        
+        li {
             padding-top:5px;
             padding-bottom:5px;
         }
@@ -126,3 +130,4 @@ iframe.signout{
         }
     }
 }
+
