--- a/source/Core/Services/DefaultViewService/HttpAssets/styles.css
+++ b/source/Core/Services/DefaultViewService/HttpAssets/styles.css
@@ -7339,6 +7339,9 @@ body {
 .login-page .login-remember input {
   margin-right: 5px;
 }
+.login-page .external-providers li:first-child {
+  padding-left: 5px;
+}
 .login-page .external-providers li {
   padding-top: 5px;
   padding-bottom: 5px;
